--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-appVersion: v3.4-cap-CR-15902
+appVersion: v3.4.4-cap-CR-17426
 name: argo-workflows
 description: A Helm chart for Argo Workflows
 type: application
-version: 0.22.8-1-cf-init
+version: 0.22.9-1-CR-17426
 icon: https://raw.githubusercontent.com/argoproj/argo-workflows/master/docs/assets/argo.png
 home: https://github.com/argoproj/argo-helm
 sources:
@@ -13,4 +13,5 @@ maintainers:
     url: https://argoproj.github.io/
 annotations:
   artifacthub.io/changes: |
-    - "[Added]: Helm helper function to allow image registry to be absent"
+    - kind: fixed
+      description: Align changelog structure to show changelogs on Artifact Hub
