remove ns qualifier from chart changes
Signed-off-by: Tim Collins <tim@thecollins.team>

--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -14,4 +14,4 @@ maintainers:
 annotations:
   artifacthub.io/changes: |
     - kind: added
-      description: Add option for workflow controller to read all secrets in its namespace.
+      description: Add option for workflow controller to read all secrets.
