Remove overwrite of configs.cm."application.instanceLabelKey"

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -163,7 +163,7 @@ configs:
 
     # -- The name of tracking label used by Argo CD for resource pruning
     # @default -- Defaults to app.kubernetes.io/instance
-    application.instanceLabelKey: argocd.argoproj.io/instance
+    application.instanceLabelKey: ""
 
     # -- Enable logs RBAC enforcement
     ## Ref: https://argo-cd.readthedocs.io/en/latest/operator-manual/upgrading/2.3-2.4/#enable-logs-rbac-enforcement
