--- a/charts/argo-rollouts/Chart.yaml
+++ b/charts/argo-rollouts/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 appVersion: v1.4.1
 description: A Helm chart for Argo Rollouts
 name: argo-rollouts
-version: 2.25.0
+version: 2.25.1
 home: https://github.com/argoproj/argo-helm
 icon: https://argoproj.github.io/argo-rollouts/assets/logo.png
 keywords:
@@ -17,3 +17,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: added
       description: Ability to provide additional volumes and volumeMounts
+    - kind: added
+      description: Missing permissions to leases under coordination api group
