feat(argo-rollouts): Add possibility to configure healthz and metrics ports to be compatible with Istio
Signed-off-by: Yevhen Tienkaiev <hronom@gmail.com>

--- a/charts/argo-rollouts/Chart.yaml
+++ b/charts/argo-rollouts/Chart.yaml
@@ -16,4 +16,6 @@ maintainers:
 annotations:
   artifacthub.io/changes: |
     - kind: added
+      description: Ability to configure metrics and healthz ports
+    - kind: added
       description: Ability to provide additional volumes and volumeMounts
