--- a/charts/argo-rollouts/templates/controller/deployment.yaml
+++ b/charts/argo-rollouts/templates/controller/deployment.yaml
@@ -37,6 +37,8 @@ spec:
       containers:
       - image: "{{ .Values.controller.image.registry }}/{{ .Values.controller.image.repository }}:{{ default .Chart.AppVersion .Values.controller.image.tag }}"
         args:
+        - --healthzPort={{ .Values.controller.healthz.port }}
+        - --metricsport={{ .Values.controller.metrics.service.port }}
         {{- if not .Values.clusterInstall }}
         - --namespaced
         {{- end }}
@@ -53,10 +55,10 @@ spec:
         imagePullPolicy: {{ .Values.controller.image.pullPolicy }}
         name: argo-rollouts
         ports:
-        - containerPort: 8090
-          name: metrics
-        - containerPort: 8080
-          name: healthz
+        - containerPort: {{ .Values.controller.metrics.service.port }}
+          name: {{ .Values.controller.metrics.service.portName }}
+        - containerPort: {{ .Values.controller.healthz.port }}
+          name: {{ .Values.controller.healthz.portName }}
         livenessProbe:
           {{- toYaml .Values.controller.livenessProbe | nindent 10 }}
         readinessProbe:
