chore(argo-workflows): update changelog via chart annotation
Signed-off-by: Stefan Tertan <stefan.tertan@fundingcircle.com>

--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -14,4 +14,4 @@ maintainers:
 annotations:
   artifacthub.io/changes: |
     - kind: added
-      description: Add optional HPA for Argo Server
+      description: Add Prometheus ServiceMonitor relabelings, metricRelabelings & targetLabels
