fix(argo-cd): collect syntax Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argo-cd/templates/crds/crd-application.yaml
+++ b/charts/argo-cd/templates/crds/crd-application.yaml
@@ -2406,7 +2406,7 @@ spec:
                                           type: string
                                       type: object
                                     type: array
-                                  passCreden[Otials:
+                                  passCredentials:
                                     description: PassCredentials pass credentials
                                       to all domains (Helm's --pass-credentials)
                                     type: boolean
