--- a/charts/argo-cd/templates/crds/crd-applicationset.yaml
+++ b/charts/argo-cd/templates/crds/crd-applicationset.yaml
@@ -2279,7 +2279,7 @@ spec:
                                                   version:
                                                     type: string
                                                 type: object
-                                     [O         kustomize:
+                                              kustomize:
                                                 properties:
                                                   commonAnnotations:
                                                     additionalProperties:
@@ -3307,7 +3307,7 @@ spec:
                                                   values:
                                                     type: string
                                                   version:
-        [I                                            type: string
+                                                    type: string
                                                 type: object
                                               kustomize:
                                                 properties:
