--- a/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
@@ -55,7 +55,6 @@ data:
       securityContext: {{- toYaml . | nindent 8 }}
       {{- end }}
     {{- end }}
-    {{- if .Values.useDefaultArtifactRepo }}
     artifactRepository:
       {{- if .Values.artifactRepository.archiveLogs }}
       archiveLogs: {{ .Values.artifactRepository.archiveLogs }}
@@ -96,10 +95,8 @@ data:
           {{- toYaml . | nindent 10 }}
         {{- end }}
       {{- end }}
-    {{- else }}
-      {{- if .Values.customArtifactRepository }}
-    artifactRepository: {{- toYaml .Values.customArtifactRepository | nindent 6 }}
-      {{- end }}
+    {{- if .Values.customArtifactRepository }}
+    {{- toYaml .Values.customArtifactRepository | nindent 6 }}
     {{- end }}
     {{- if .Values.controller.metricsConfig.enabled }}
     metricsConfig:
