--- a/charts/argo-workflows/templates/server/server-deployment.yaml
+++ b/charts/argo-workflows/templates/server/server-deployment.yaml
@@ -38,7 +38,7 @@ spec:
       {{- end }}
       {{- with .Values.server.extraInitContainers }}
       initContainers:
-        {{- tpl . $ | toYaml . | nindent 8 }}
+        {{- tpl . $ | toYaml | nindent 8 }}
       {{- end }}
       containers:
         - name: argo-server
