fix(github): fix error in codeowners file and update README about security
This is a follow-up of #2006.

We cleared out users who have not contributed in the last year and moved
them to EMERITUS.md

We also created SECURITY.md

Signed-off-by: jmeridth <jmeridth@gmail.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -2,7 +2,7 @@
 *                              @mkilchhofer @jmeridth
 
 # Argo Workflows
-/charts/argo-workflows/        @vladlosev @yann-soubeyrand @jmeridth @yu-croco
+/charts/argo-workflows/        @vladlosev @jmeridth @yu-croco
 
 # Argo CD
 /charts/argo-cd/               @mbevc1 @mkilchhofer @yu-croco @jmeridth @pdrastil
