add template for application
Signed-off-by: Joe Lee <lj_2005@163.com>

--- a/charts/argocd-apps/templates/applications.yaml
+++ b/charts/argocd-apps/templates/applications.yaml
@@ -49,3 +49,10 @@ spec:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 {{- end }}
+---
+{{- range .Values.applicationTemplates }}
+{{- $template := .template }}
+{{- range .apps }}
+{{  tpl $template  (set . "Template" $.Template) }}
+{{- end }}
+{{- end }}
