--- a/charts/argocd-apps/templates/applications.yaml
+++ b/charts/argocd-apps/templates/applications.yaml
@@ -51,8 +51,15 @@ spec:
 {{- end }}
 ---
 {{- range .Values.applicationTemplates }}
-{{- $template := .template }}
+{{- if kindIs "string" .template }}
+{{- $template := .template -}}
 {{- range .apps }}
-{{  tpl $template  (set . "Template" $.Template) }}
+{{ tpl $template (set . "Template" $.Template) }}
+{{- end }}
+{{- else }}
+{{- $template := .template | toYaml -}}
+{{- range .apps }}
+{{ tpl $template (set . "Template" $.Template) }}
+{{- end }}
 {{- end }}
 {{- end }}
