--- a/charts/argocd-apps/templates/applicationsets.yaml
+++ b/charts/argocd-apps/templates/applicationsets.yaml
@@ -77,3 +77,17 @@ spec:
     {{- end -}}
   {{- end }}
 {{- end }}
+---
+{{- range .Values.applicationsetTemplates }}
+{{- if kindIs "string" .template }}
+{{- $template := .template -}}
+{{- range .appSets }}
+{{ tpl $template (set . "Template" $.Template) }}
+{{- end }}
+{{- else }}
+{{- $template := .template | toYaml -}}
+{{- range .appSets }}
+{{ tpl $template (set . "Template" $.Template) }}
+{{- end }}
+{{- end }}
+{{- end }}
