remove apiVersionOverrides from readme
Signed-off-by: ryanpark0203 <108246291+ryanpark0203@users.noreply.github.com>

--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -29,7 +29,7 @@ fullnameOverride:
 # -- Override the Kubernetes version, which is used to evaluate certain manifests
 kubeVersionOverride: ""
 
-# -- Override APIVersions
+# Override APIVersions
 apiVersionOverrides:
   # -- String to override apiVersion of autoscaling rendered by this helm chart
   autoscaling: "" # autoscaling/v2
