--- a/charts/argocd-apps/values.yaml
+++ b/charts/argocd-apps/values.yaml
@@ -133,6 +133,9 @@ applicationsets: []
 #     # Set Application finalizer
 #     preserveResourcesOnDeletion: false
 
+# --  Deploy Argo CD Applications/ApplicationSets/Projects within this helm release
+# @default -- `[]` (See [values.yaml])
+## Ref: https://argo-cd.readthedocs.io/en/stable/operator-manual/applicationset/
 itemTemplates: []
 # - items:
 #     - name: my-appset
